<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.interlineappv30.DetProductoActivity"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:weightSum="1"
    android:layout_marginLeft="10dp"
    android:layout_marginRight="10dp"
    android:layout_marginTop="10dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/txtCod"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txtCod"
            android:textColor="@color/colorPrimary"
            android:textStyle="bold"/>
        <TextView
            android:id="@+id/txtCodEje"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txtCodEje"
            android:textColor="#5d5d5d"
            android:textStyle="bold"
            android:layout_marginLeft="40dp"/>
        <TextView
            android:id="@+id/txtNomEje"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txtNomEje"
            android:textColor="#5d5d5d"
            android:textStyle="bold"
            android:layout_marginLeft="20dp"/>
    </LinearLayout>

    <View
        android:layout_width="fill_parent"
        android:layout_height="1dp"
        android:background="@color/colorPrimary"
        android:layout_marginTop="2sp"
        android:layout_marginBottom="2sp"/>

    <!-- Datos de la empresa-->
    <TextView
        android:id="@+id/txtInfo8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txtInfo8"
        android:textColor="@color/colorPrimary"
        android:textStyle="bold"
        android:layout_marginTop="10sp"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/txtCodigo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txtCodigo"
            android:textColor="@color/colorPrimary"
            android:textStyle="bold"/>
        <TextView
            android:id="@+id/idCodigo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/idCodigo"
            android:textColor="#5d5d5d"
            android:textStyle="bold"
            android:layout_marginLeft="20dp"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/txtNif"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txtNif"
            android:textColor="@color/colorPrimary"
            android:textStyle="bold"/>
        <TextView
            android:id="@+id/idNif"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/idNif"
            android:textColor="#5d5d5d"
            android:textStyle="bold"
            android:layout_marginLeft="45dp"/>
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/txtNombreEmp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txtNombre"
            android:textColor="@color/colorPrimary"
            android:textStyle="bold"/>
        <TextView
            android:id="@+id/idNombreEmp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/idNombreEmp"
            android:textColor="#5d5d5d"
            android:textStyle="bold"
            android:layout_marginLeft="15dp"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/txtDireccionEmp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txtDireccionEmp"
            android:textColor="@color/colorPrimary"
            android:textStyle="bold"/>
        <TextView
            android:id="@+id/idDireccionEmp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/idDireccionEmp"
            android:textColor="#5d5d5d"
            android:textStyle="bold"
            android:layout_marginLeft="5dp"/>
    </LinearLayout>

    <View
        android:layout_width="fill_parent"
        android:layout_height="1dp"
        android:background="@color/colorPrimary"
        android:layout_marginTop="2sp"
        android:layout_marginBottom="2sp"/>
    <!-- Datos de Devolución-->
    <TextView
        android:id="@+id/txtInfo7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txtInfo7"
        android:textColor="@color/colorPrimary"
        android:textStyle="bold"
        android:layout_marginTop="10sp"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/txtCausal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txtCausal"
            android:textColor="@color/colorPrimary"
            android:textStyle="bold"/>
        <TextView
            android:id="@+id/idCausal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/idCausal"
            android:textColor="#5d5d5d"
            android:textStyle="bold"
            android:layout_marginLeft="20dp"/>
    </LinearLayout>

    <TextView
        android:id="@+id/txtObservacion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txtInfo4"
        android:textColor="@color/colorPrimary"
        android:textStyle="bold"/>

    <TextView
        android:id="@+id/idDetObservacion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/idDetObservacion"
        android:textColor="#5d5d5d"
        android:textStyle="bold"/>
<!--
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/txtNombreCli"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txtNombreCli"
            android:textColor="#5d5d5d"
            android:textStyle="bold"/>
        <TextView
            android:id="@+id/idNombreCli"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/idNombreCli"
            android:textColor="#5d5d5d"
            android:textStyle="bold"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/txtTelCLi"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txtTelCli"
            android:textColor="#5d5d5d"
            android:textStyle="bold"/>
        <TextView
            android:id="@+id/idTelCli"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/idTelCli"
            android:textColor="#5d5d5d"
            android:textStyle="bold"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/txtEmailCli"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txtEmailCli"
            android:textColor="#5d5d5d"
            android:textStyle="bold"/>
        <TextView
            android:id="@+id/idEmailCli"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/idEmailCli"
            android:textColor="#5d5d5d"
            android:textStyle="bold"/>
    </LinearLayout>-->

    <View
        android:layout_width="fill_parent"
        android:layout_height="1dp"
        android:background="@color/colorPrimary"
        android:layout_marginTop="2sp"
        android:layout_marginBottom="2sp"/>

    <!-- Datos del producto-->
    <TextView
        android:id="@+id/txtInfo5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txtInfo6"
        android:textColor="@color/colorPrimary"
        android:textStyle="bold"
        android:layout_marginTop="10sp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/txtCodProducto"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txtCodProducto"
            android:textColor="@color/colorPrimary"
            android:textStyle="bold"/>
        <TextView
            android:id="@+id/idCodProducto"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/idCodProducto"
            android:textColor="#5d5d5d"
            android:textStyle="bold"
            android:layout_marginLeft="20dp"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/txtNombreProducto"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txtNombreProducto"
            android:textColor="@color/colorPrimary"
            android:textStyle="bold"/>
        <TextView
            android:id="@+id/idNombreProducto"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/idNombreProducto"
            android:textColor="#5d5d5d"
            android:textStyle="bold"
            android:layout_marginLeft="14dp"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/txtLoteProd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txtLoteProd"
            android:textColor="@color/colorPrimary"
            android:textStyle="bold"/>
        <TextView
            android:id="@+id/idLoteProd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/idLoteProd"
            android:textColor="#5d5d5d"
            android:textStyle="bold"
            android:layout_marginLeft="39dp"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/txtFechaVenc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txtFechaVenc"
            android:textColor="@color/colorPrimary"
            android:textStyle="bold"/>
        <TextView
            android:id="@+id/idFechaVenc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/idFechaVenc"
            android:textColor="#5d5d5d"
            android:textStyle="bold"
            android:layout_marginLeft="20dp"/>
    </LinearLayout>

    <View
        android:layout_width="fill_parent"
        android:layout_height="1dp"
        android:background="@color/colorPrimary"
        android:layout_marginTop="2sp"
        android:layout_marginBottom="2sp"/>

    <!-- Cantidad y observacion-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/txtCantidadDev"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/txtCantidadDev"
            android:textColor="@color/colorPrimary"
            android:textStyle="bold"/>
        <EditText
            android:id="@+id/idCantidadDev"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/hintCantidadDev"
            android:textColor="#5d5d5d"
            android:textStyle="bold"
            android:imeOptions="actionNext"
            android:inputType="phone"/>

    </LinearLayout>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hintObservacion"
        android:id="@+id/idObservacion"
        android:maxLength="255"
        android:layout_marginTop="5sp"
        android:imeOptions="actionSend"
        android:inputType="text"/>


    <Button
        android:id="@+id/btnAdicionar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btnAdicionar"
        android:layout_marginTop="0dp"/>
    <Button
        android:id="@+id/btnFinalizarDev"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btnAsignarPrecinto"
        android:layout_marginTop="0dp"/>

</LinearLayout>

